# braindump

./: .gitignore  Cargo.toml  README.md  justfile
examples/: basic.rs  rig.rs
src/: embed.rs  error.rs  fastembed.rs  id_gen.rs  lib.rs  storage.rs  vector_store.rs  wasm.rs
src/memory/: cache.rs  generation.rs  manager.rs  mod.rs
