[package]
name = "braindump"
version = "0.1.0"
edition = "2024"
description = "An ergonomic, opinionated memory interface for AI agents and LLMs."
license = "MIT"
repository = "https://github.com/joshua-mo-143/braindump"
keywords = ["ai", "memory", "llm", "persistence", "agent"]
categories = ["ai", "database"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = "0.4.42"
fastembed = { version = "5.2.1", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = []
fastembed = ["dep:fastembed"]
wasm = []
