[package]
name = "braindump"
version = "0.0.1"
edition = "2024"
description = "An ergonomic, opinionated memory interface for AI agents."
license = "MIT"
repository = "https://github.com/joshua-mo-143/braindump"
keywords = ["ai", "memory", "llm", "persistence", "agent"]
categories = ["database", "wasm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
chrono = "0.4.42"
fastembed = { version = "5.2.1", optional = true }
rand = "0.9.2"
# Temporarily using the `main` branch for Rig while awaiting new release
rig-core = { git = "https://github.com/0xplaygrounds/rig.git", branch = "main", optional = true, default-features = false }
schemars = { version = "1.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.19.0", features = ["v4"], optional = true }

[features]
default = []
fastembed = ["dep:fastembed"]
wasm = []
uuid = ["dep:uuid"]
rig = ["dep:rig-core"]
rig-wasm = ["dep:rig-core", "rig-core/worker"]

[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["fastembed"]

[[example]]
name = "rig"
path = "examples/rig.rs"
required-features = ["rig"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
# Temporarily using the `main` branch for Rig while awaiting new release
rig-core = { git = "https://github.com/0xplaygrounds/rig.git", branch = "main" }
